# CMakeTest

./: CMakeLists.txt  README.md
AddLib/: AddLib.cpp  AddLib.h  AddLibInterface.h  AddLib_global.h  CMakeLists.txt
Src/: CMakeLists.txt  Test.cpp
